Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-4374

lctl set_param -d -P mdt.<FSname>-MDT0000.hsm_control, returns a false error when default already set

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Major Major
    • Lustre 2.6.0
    • Lustre 2.5.0, Lustre 2.6.0
    • None
    • 3
    • 11973

      On a MDS :

      [root@mds ~]# dmesg -c > /dev/null
      [root@mds ~]# lctl set_param -P mdt.lustre-MDT0000.hsm_control=enabled
      [root@mds ~]# dmesg
      Lustre: Setting parameter general.mdt.lustre-MDT0000.hsm_control in log params
      Lustre: MGS: non-config logname received: params
      Lustre: Skipped 13 previous similar messages
      LustreError: 3043:0:(mdt_coordinator.c:950:mdt_hsm_cdt_start()) lustre-MDT0000: Coordinator already started
      [root@mds ~]# lctl set_param -d -P mdt.lustre-MDT0000.hsm_control
      [root@mds ~]# dmesg
      Lustre: Setting parameter general.mdt.lustre-MDT0000.hsm_control in log params
      Lustre: MGS: non-config logname received: params
      Lustre: Skipped 13 previous similar messages
      LustreError: 3043:0:(mdt_coordinator.c:950:mdt_hsm_cdt_start()) lustre-MDT0000: Coordinator already started
      Lustre: Disabling parameter general.mdt.lustre-MDT0000.hsm_control in log params
      [root@mds ~]# lctl set_param -d -P mdt.lustre-MDT0000.hsm_control
      error: executing set_param: Success
      [root@mds ~]# dmesg
      Lustre: Setting parameter general.mdt.lustre-MDT0000.hsm_control in log params
      Lustre: MGS: non-config logname received: params
      Lustre: Skipped 13 previous similar messages
      LustreError: 3043:0:(mdt_coordinator.c:950:mdt_hsm_cdt_start()) lustre-MDT0000: Coordinator already started
      Lustre: Disabling parameter general.mdt.lustre-MDT0000.hsm_control in log params
      Lustre: Disabling parameter general.mdt.lustre-MDT0000.hsm_control in log params
      LustreError: 3051:0:(mgs_handler.c:744:mgs_iocontrol()) MGS: setparam err: rc = 1
      [root@mds ~]# 
      

      This seem to come from the wrong interpretation of rc=1 being returned from mgs_modify() when no config-llog record modification occured (!rc && !mml->mml_modified) in llog_process().

      Will provide a patch soon.

            bfaccini Bruno Faccini (Inactive)
            bfaccini Bruno Faccini (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved: