lustre/utils/lustre_cfg.c
@@ -552,7 +552,7 @@ static int jt_lcfg_mgsparam2(int argc, char **argv, struct param_opts *popt)
 				 rc = PTR_ERR(lcfg);
 		} else {
 			int rc2 = lcfg_mgs_ioctl(argv[0], OBD_DEV_ID, lcfg);
-			if (rc2 != 0) {
+			if (rc2 < 0) {
 				fprintf(stderr, "error: executing %s: %s\n",
 					jt_cmdname(argv[0]), strerror(errno));
 				if (rc == 0)
